--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@react-google-maps/api": "2.20.7",
-    "leaflet": "1.9.4",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-leaflet": "5.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "7.9.4"
   },
   "devDependencies": {
